// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Phase 29 Tranche 7c — narrative snapshot stability > English preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "ðəː giŋ siː ðəː vʊlf",
    },
    {
      "english": "the dogs see the wolves",
      "target": "ðəː dɔgs siː ðəː vʊlfs",
    },
    {
      "english": "i give you the bread",
      "target": "aj gɪvɪŋ ju",
    },
    {
      "english": "the king walks at the river",
      "target": "ðəː giŋ vɔgɪŋ ðəː ɹivəːɹ",
    },
    {
      "english": "the king does not see the wolf",
      "target": "ðəː giŋ nat siː ðəː vʊlf",
    },
  ],
  "preset": "english",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Romance preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "deːgeː βidt bupuum",
    },
    {
      "english": "the dogs see the wolves",
      "target": "gabeː βidnt bupuum",
    },
    {
      "english": "i give you the bread",
      "target": "ego do tuam",
    },
    {
      "english": "the king walks at the river",
      "target": "deːgeː ambubt tbumeː",
    },
    {
      "english": "the king does not see the wolf",
      "target": "deːgeː non βidt bupuum",
    },
  ],
  "preset": "romance",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Toki Pona preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "pælænæulyl lukin kumyly",
    },
    {
      "english": "the dogs see the wolves",
      "target": "kukumyly lukin kukumyly",
    },
    {
      "english": "i give you the bread",
      "target": "mi pælæ sina",
    },
    {
      "english": "the king walks at the river",
      "target": "pælænæulyl æuuːpuːup kæpy telo",
    },
    {
      "english": "the king does not see the wolf",
      "target": "pælænæulyl ala lukin kumyly",
    },
  ],
  "preset": "tokipona",
}
`;
